--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,10 +26,21 @@ h1 {
 }
 body {
   background-color: antiquewhite;
-  align-content: center;
 }
-main {
+.container2 {
+  height: 450px;
+  width: 960px;
   border: solid lightgrey;
   background-color: white;
-  align-self: auto;
+  margin-left: auto;
+  margin-right: auto
 }
+p{
+  font-family: Arial;
+}
+footer {
+    background:#666666;
+ padding: 20px;
+  height: 95px;
+  width: 940;
+  clear: both;
